--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,12 @@
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
 	<script defer src='/build/bundle.js'></script>
 	<!-- <script rel="stylesheet" href="/src/css/index.css"></script> -->
 </head>
+
 
 <body>
 </body>
